--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "events": "^1.0.2",
+    "flux": "^2.1.1",
     "grunt": "^0.4.5",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-watch": "^0.6.1",
     "jsx-loader": "^0.13.2",
     "matchdep": "^0.3.0",
+    "object-assign": "^4.0.1",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
