--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "matchdep": "^0.3.0",
     "object-assign": "^4.0.1",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^0.13.3",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
