--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "devDependencies": {
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "clean": "^4.0.1",
     "events": "^1.0.2",
     "flux": "^2.1.1",
     "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-watch": "^0.6.1",
     "jsx-loader": "^0.13.2",
