--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "matchdep": "^0.3.0",
     "object-assign": "^4.0.1",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^0.13.3",
-    "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.10.1"
+    "react-router": "^0.13.3"
   },
   "dependencies": {
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "webpack-dev-server": "^1.10.1",
+    "webpack": "^1.12.0"
   }
 }
