--- a/package.json
+++ b/package.json
@@ -10,25 +10,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^5.8.23",
-    "babel-loader": "^5.3.2",
-    "clean": "^4.0.1",
-    "events": "^1.0.2",
-    "flux": "^2.1.1",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-less": "^1.0.1",
     "grunt-contrib-watch": "^0.6.1",
-    "jsx-loader": "^0.13.2",
-    "matchdep": "^0.3.0",
-    "object-assign": "^4.0.1",
-    "react-hot-loader": "^1.3.0",
-    "react-router": "^0.13.3"
+    "matchdep": "^0.3.0"
   },
   "dependencies": {
     "react": "^0.13.3",
     "webpack-dev-server": "^1.10.1",
-    "webpack": "^1.12.0"
+    "webpack": "^1.12.0",
+    "react-hot-loader": "^1.3.0",
+    "jsx-loader": "^0.13.2",
+    "babel-loader": "^5.3.2",
+    "object-assign": "^4.0.1",
+    "react-router": "^0.13.3",
+    "events": "^1.0.2",
+    "flux": "^2.1.1",
+    "babel-core": "^5.8.23"
   }
 }
